<resources>
    <string name="app_name">Visual</string>
    <string name="userName">Имя :</string>
    <string name="userEmail">E-mail :</string>
    <string name="userPassword">Пароль :</string>
    <string name="userReg"> Регистрация </string>
    <string name="logIn"> Вход </string>
    <string name="welcome"> Welcome </string>
    <string name="autoriz"> Авторизация </string>
    <string name="PasswordConfirm"> Подтверждение пароля : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
