<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bg.visual.Registration">

    <TextView
        android:text="@string/userReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:id="@+id/userName"
        android:layout_alignParentEnd="true"
        android:hint="Имя" />

    <TextView
        android:text="@string/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/userName"
        android:id="@+id/userEmail"
        android:layout_alignParentEnd="true"
        android:hint="E-mail" />

    <TextView
        android:text="@string/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmail"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/userEmail"
        android:id="@+id/userPassword"
        android:layout_alignParentEnd="true"
        android:hint="Пароль" />

    <TextView
        android:text="@string/PasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPassword"
        android:layout_alignParentStart="true"
        android:id="@+id/textView11" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/userPassword"
        android:id="@+id/confirmPassword"
        android:layout_alignParentEnd="true"
        android:hint="Пароль" />

    <Button
        android:text="@string/userReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/btnUserReg"
        android:layout_below="@+id/confirmPassword"
        android:layout_toEndOf="@+id/textView2"
        android:onClick="userReg" />

</RelativeLayout>
