<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffb402"
    tools:context="com.tkachuksm.visual.LogIn">

    <TextView
        android:text="@string/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold|italic"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:text="@string/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textView3"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView4"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/userName"
        android:id="@+id/userPassword"
        android:layout_alignParentEnd="true"
        android:hint="Пароль" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_below="@+id/textView3"
        android:hint="Имя" />

    <Button
        android:text="@string/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogIn"
        android:onClick="btnLogIn"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/background_light" />

    <Button
        android:text="@string/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogOut"
        android:onClick="btnLogOut"
        android:layout_alignBottom="@+id/btnLogIn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_alignTop="@+id/btnLogIn"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
